# silo-core

./: AGENT.md  Cargo.toml  README.md
src/: algebra.rs  analysis.rs  geometry.rs  lib.rs
